--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Science Engineering - Misadventures and Coffee"
 theme = "blackburn"
 author = "J.Arndt"
-copyright = "Copyright Joshua Arndt 2020 &copy; All rights reserved."
+copyright = "Copyright Joshua Arndt 2021 &copy; All rights reserved."
 canonifyurls = true
 paginate = 10
 
@@ -68,3 +68,26 @@ paginate = 10
   # github = "weightedEights"
   # stackoverflow = "*"
   # linkedin = "*"
+
+[privacy]
+  [privacy.disqus]
+    disable = false
+  [privacy.googleAnalytics]
+    anonymizeIP = false
+    disable = false
+    respectDoNotTrack = false
+    useSessionStorage = false
+  [privacy.instagram]
+    disable = false
+    simple = false
+  [privacy.twitter]
+    disable = false
+    enableDNT = false
+    simple = false
+  [privacy.vimeo]
+    disable = false
+    enableDNT = false
+    simple = false
+  [privacy.youtube]
+    disable = false
+    privacyEnhanced = false
